# brokerage-cli

./: .gitignore  LICENSE.md  Pipfile  README.md  pyproject.toml
.codex/skills/brokerage-cli/: SKILL.md
src/brokerage/: __init__.py  cli.py  errors.py  models.py  parser.py  passwords.py  pdf.py  serializers.py  summary.py
src/brokerage/brokers/: __init__.py  clear.py  cm_capital.py  ion_itau.py  nu_invest.py  sinacor.py
tests/: test_clear_parser.py  test_cm_capital_parser.py  test_ion_itau_parser.py  test_nu_invest_parser.py  test_passwords.py  test_serializers.py  test_sinacor_parser.py  test_summary.py
tests/fixtures/clear/: multiple_options_sheet.txt  put_option_sheet.txt  stock_fractional_sheet.txt
tests/fixtures/cm_capital/: options_sale_cells.txt  options_sale_sheet.txt
tests/fixtures/ion_itau/: fractional_sheet.txt
tests/fixtures/nu_invest/: own_layout_sheet.txt
tests/fixtures/sinacor/: nu_invest_sheet.txt
